--- a/src/pages/CreatePresentationPage/styles.css
+++ b/src/pages/CreatePresentationPage/styles.css
@@ -6,3 +6,14 @@
     list-style-type: none;
     margin: 0 0 10px 0;
 }
+
+.create-presentation-page .no-slides-header {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.create-slide-btn {
+    margin-top: 10px;
+}
